@@ -1,7 +1,14 @@
 1998-07-17  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>
 
+	* eval.c (scm_copy_tree): Reverted last change: `eval' uses
+	scm_copy_tree on code in order not to let memoized code to leak
+	out.  Thus, scm_copy_tree needs to copy vectors as well since
+	quasiquote can introduce evaluated code also inside vector
+	constants.
+
+1998-07-17  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>
+
 	* eval.c (scm_copy_tree): Removed ability to copy vectors.
-	(Thanks to Doug Evans.)
 
 	* gh_data.c, gh.h (gh_ints2scm, gh_longs2ivect,
 	gh_ulongs2uvect): New procedures.  (Complements gh_doubles2scm and
